# ASCII-SolarSystemSimulator

./: .gitignore  CMakeLists.txt  README.md  earth-animation.txt  settings.ini  title.txt
src/: file_manager.c  file_manager.h  fs.c  fs.h  global.c  global.h  main.c  screen.h  structs.h  vector.c  vector.h
src/config/: config.ini
src/graphics/: drawing.c  drawing.h  layer.c  layer.h  render.c  render.h  renderer.c  renderer.h
src/gui/: body_editor.c  body_editor.h  edit_menu.c  edit_menu.h  error.c  error.h  main_menu.c  main_menu.h  overlay.c  overlay.h
src/lib/: debugmalloc.h
src/menu/: edit_menu.c  edit_menu.h  main_menu.c  main_menu.h
src/sim/: body.c  body.h  body_array.c  body_array.h  simulator.c  simulator.h  vector.c  vector.h
